compiler/testData/diagnostics/tests/enum/inner/redeclarationInClassObject.kt
class A {
    enum class <!REDECLARATION!>E<!> {
        ENTRY
    }
    
    default object {
        enum class <!REDECLARATION!>E<!> {
            ENTRY2
        }
    }
}
